# my-template-python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: app.py  test_app.py
src/utils/: feeling.py  test_feeling.py
