[project]
name = "Your-Project-Name"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "fastapi>=0.122.0",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "pytest>=9.0.1",
    "poethepoet>=0.31.1",
    "httpx>=0.28.1",
    "pre-commit>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poe.tasks]
dev = "uvicorn src.app:app --reload"
test = "pytest"
lint = "mypy ."
format = "ruff format ."